syntax = "proto3";

import "org/timemates/api/timers/members/invites/types/Invite.proto";

option java_package = "org.timemates.api.timers.members.invites.requests";

message GetInvitesRequest {
  int64 timerId = 1;
  optional string pageToken = 2;
  int32 pageSize = 3;


  message Response {
    repeated Invite invites = 1;
    optional string nextPageToken = 3;
  }
}