syntax = "proto3";

import "/timemates/timers/types/Timer.proto";

option java_package = "org.timemates.api.timers.requests";

message RemoveTimerRequest {
  int64 timerId = 1;
}