syntax = "proto3";

option java_package = "io.timemates.api.authorizations.requests";

message StartAuthorizationRequest {
  string emailAddress = 1;

  message Response {
    Type type = 1;

    enum Type {
      SUCCESS = 0;
      EMAIL_IS_INVALID = 1;
      TOO_MANY_REQUESTS = 2;
    }
  }
}